--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   
-  <base href="http://cargocollective.com" />
+  <base href="http://paulodourado.com" />
   <link rel="shortcut icon" href="https://googledrive.com/host/0B9TKK4Ivm_cVMk1MRXp0c2gtV1U/iconamy.ico">
   <title>
     Amy Trabka
   </title>
-  <link href="http://cargocollective.com/stylesheet/paulodourado" id="user_stylesheet" rel="stylesheet" type="text/css" />
+  <link href="http://www.paulodourado.com/stylesheet" id="user_stylesheet" rel="stylesheet" type="text/css" />
   
   <script type='text/javascript' src='/_js/cargo.jquery.package.js?14.03.28'>
   </script>
