--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ $(document).ready(function () {
 					</div>
 					<div class="textcontainer">
 					<p id="p1" class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com <br> +961 78 868 069</p>
+					<p id="p2" class="contact">www.amytrabka.com <br> amtgithub@gmail.com <br> +961 78 868 069</p>
 			</div>
 		</div>
 		<div class="col-md-8">
