--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="reset.css" type="text/css" rel="stylesheet">
-	<link href="style.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="style.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Inconsolata|Roboto+Mono:100i,300,300i,400|Source+Code+Pro:200,300,400" rel="stylesheet">
@@ -42,7 +42,7 @@ $(document).ready(function () {
 					</div>
 					<div class="textcontainer">
 					<p id="p1" class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<p id="p2" class="contact">www.amytrabka.com <br> amtgithub@gmail.com <br> +961 78 868 069</p>
+					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com <br> +961 78 868 069</p>
 			</div>
 		</div>
 		<div class="col-md-8">
