--- a/index.html
+++ b/index.html
@@ -11,20 +11,7 @@
 	<link rel="icon" type="image/png" href="iconamy.ico" sizes="32x32">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script>
-$(document).ready(function () {
-
-    $("#p1, #p2").hide();
-
-    $("#btn1").click(function(){
-         $("#p1").toggle();
-    });
-
-    $("#btn2").click(function(){
-         $("#p2").toggle();
-    });
-});
-</script>
+	<script src="script.js"></script>
 	<title>
 		Amy Trabka
 	</title>
