--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<button id="btn2" class="listitem">Contact</a>
 					</div>
 					<div class="textcontainer">
-					<p id="p1" class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p id="p1" class="about">Amy Trabka is a multimedia artist based in Beirut, Lebanon.</p>
 					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com <br> +961 78 868 069</p>
 			</div>
 		</div>
