--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 		<div class="col-md-8">
-			<img src="1.png" class="img1">
+			<img src="1.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2006.</p>
 			<img src="2.png" class="img2">
 			<p class="imgtext">Piece 1. Series 3. 2006.</p>
