--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 			</div>
 		</div>
 		<div class="col-md-8">
-			<img src="1.jpg" class="img1">
+			<img src="1.png" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2006.</p>
-			<img src="2.jpg" class="img2">
+			<img src="2.png" class="img2">
 			<p class="imgtext">Piece 1. Series 3. 2006.</p>
-			<img src="3.jpg" class="img2">
+			<img src="3.png" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2006.</p>
-			<img src="4.jpg" class="img2">
+			<img src="4.png" class="img2">
 			<p class="imgtext">Piece 4. Series 2. 2006.</p>
-			<img src="5.jpg" class="img2">
+			<img src="5.png" class="img2">
 			<p class="imgtext">Piece 3. Series 1. 2006.</p>
-			<img src="6.jpg" class="img2">
+			<img src="6.png" class="img2">
 			<p class="imgtext">Piece 2. Series 1. 2006.</p>
-			<img src="7.jpg" class="img2">
+			<img src="7.png" class="img2">
 			<p class="imgtext">Piece 7. Series 1. 2006.</p>
-			<img src="8.jpg" class="img2">
+			<img src="8.png" class="img2">
 			<p class="imgtext">Piece 8. Series 3. 2006.</p>
-			<img src="9.jpg" class="img2">
+			<img src="9.png" class="img2">
 			<p class="imgtext">Piece 1. Series 2. 2006.</p>
 		</div>
 	</div>
