--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/jpg" href="favicon-32x32.jpg" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Inconsolata|Roboto+Mono:100i,300,300i,400|Source+Code+Pro:200,300,400" rel="stylesheet">
-	<link rel="icon" type="image/png" href="iconamy.ico" sizes="32x32">
+	<link rel="icon" type="image/jpg" href="iconamy.ico" sizes="32x32">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="script.js"></script>
@@ -23,33 +23,37 @@
 				<h1 class="head1"> 
 					<a href="index.html" class="head1">amy_trabka</a>
 				</h1>
-					<button id="btn1" class="listitem">About</button>
+				  <button class="listitem"> <a  href="index_hr.html" style="color: inherit; text-decoration: none">
+				  	high resolution</a></button>
+				  <br>
+					<button id="btn1" class="listitem">about</button>
 					<t class="break">/</t>
-					<button id="btn2" class="listitem">Contact</a>
+					<button id="btn2" class="listitem">contact</a>
 					</div>
+					<br>
 					<div class="textcontainer">
 					<p id="p1" class="about">Amy Trabka is a multimedia artist based in Beirut, Lebanon.</p>
 					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com <br> +961 78 868 069</p>
 			</div>
 		</div>
 		<div class="col-md-8">
-			<img src="1.png" class="img1">
+			<img src="1.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2006.</p>
-			<img src="2.png" class="img2">
+			<img src="2.jpg" class="img2">
 			<p class="imgtext">Piece 1. Series 3. 2006.</p>
-			<img src="3.png" class="img2">
+			<img src="3.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2006.</p>
-			<img src="4.png" class="img2">
+			<img src="4.jpg" class="img2">
 			<p class="imgtext">Piece 4. Series 2. 2006.</p>
-			<img src="5.png" class="img2">
+			<img src="5.jpg" class="img2">
 			<p class="imgtext">Piece 3. Series 1. 2006.</p>
-			<img src="6.png" class="img2">
+			<img src="6.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 1. 2006.</p>
-			<img src="7.png" class="img2">
+			<img src="7.jpg" class="img2">
 			<p class="imgtext">Piece 7. Series 1. 2006.</p>
-			<img src="8.png" class="img2">
+			<img src="8.jpg" class="img2">
 			<p class="imgtext">Piece 8. Series 3. 2006.</p>
-			<img src="9.png" class="img2">
+			<img src="9.jpg" class="img2">
 			<p class="imgtext">Piece 1. Series 2. 2006.</p>
 		</div>
 	</div>
