--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 			<div class="header">
 				<h1 class="head1"> 
-					<a href="index.html" class="head1">amy_trabka</a>
+					<a href="/" class="head1">amy_trabka</a>
 				</h1>
-				  <button class="listitem"> <a  href="index_hr.html" style="color: inherit; text-decoration: none">
+				  <button class="listitem"> <a  href="hr" style="color: inherit; text-decoration: none">
 				  	high resolution</a></button>
 				  <br>
 					<button id="btn1" class="listitem">about</button>
