--- a/hr.html
+++ b/hr.html
@@ -21,15 +21,19 @@
 		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 			<div class="header">
 				<h1 class="head1"> 
-					<a href="/" class="head1">amy_trabka</a>
+					<a href="index.html" class="head1">amy_trabka</a>
 				</h1>
-				  <button id="btn0" class="listitem"><a href="/" style="color: inherit; text-decoration: none">
+				  <button id="btn0" class="listitem"><a href="index.html" style="color: inherit; text-decoration: none">
 				  	low resolution</a></button>
+				  	<br>
+						<button class="listitem"> <a  href="sc.html" style="color: inherit; text-decoration: none">
+				  sculpture</a></button>
 				  <br>
 					<button id="btn1" class="listitem">about</button>
 					<t class="break">/</t>
-					<button id="btn2" class="listitem">contact</a>
+					<button id="btn2" class="listitem">contact</button>
 					</div>
+					<br>
 					<br>
 					<div class="textcontainer">
 					<p id="p1" class="about">Amy Trabka is a multimedia artist based in Beirut, Lebanon.</p>
@@ -55,6 +59,8 @@
 			<p class="imgtext">Piece 8. Series 3. 2006.</p>
 			<img src="i.jpg" class="img2_hr">
 			<p class="imgtext">Piece 1. Series 2. 2006.</p>
+			<br>
+			<p class="endnote">&copy amy trabka 2020</p>
 		</div>
 	</div>
 </body>
