--- a/sc.html
+++ b/sc.html
@@ -41,24 +41,16 @@
 			    </div>
 		</div>
 		<div class="col-md-8">
-			<img src="1.jpg" class="img1">
+			<img src="img1.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2019.</p>
-			<img src="2.jpg" class="img2">
-			<p class="imgtext">Piece 1. Series 3. 2019.</p>
-			<img src="3.jpg" class="img2">
+			<img src="img3.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
-			<img src="4.jpg" class="img2">
+			<img src="img4.jpg" class="img2">
 			<p class="imgtext">Piece 4. Series 2. 2019.</p>
-			<img src="5.jpg" class="img2">
-			<p class="imgtext">Piece 3. Series 1. 2019.</p>
-			<img src="6.jpg" class="img2">
+			<img src="img6.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 1. 2019.</p>
-			<img src="7.jpg" class="img2">
+			<img src="img7.jpg" class="img2">
 			<p class="imgtext">Piece 7. Series 1. 2019.</p>
-			<img src="8.jpg" class="img2">
-			<p class="imgtext">Piece 8. Series 3. 2019.</p>
-			<img src="9.jpg" class="img2">
-			<p class="imgtext">Piece 1. Series 2. 2019.</p>
 			<br>
 			<p class="endnote">&copy amy trabka 2020</p>
 		</div>
