--- a/hr.html
+++ b/hr.html
@@ -21,12 +21,12 @@
 		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 			<div class="header">
 				<h1 class="head1"> 
-					<a href="index.html" class="head1">amy_trabka</a>
+					<a href="/" class="head1">amy_trabka</a>
 				</h1>
-				  <button id="btn0" class="listitem"><a href="index.html" style="color: inherit; text-decoration: none">
+				  <button id="btn0" class="listitem"><a href="/" style="color: inherit; text-decoration: none">
 				  	low resolution</a></button>
 				  	<br>
-						<button class="listitem"> <a  href="sc.html" style="color: inherit; text-decoration: none">
+						<button class="listitem"> <a  href="sc" style="color: inherit; text-decoration: none">
 				  sculpture</a></button>
 				  <br>
 					<button id="btn1" class="listitem">about</button>
