--- a/sc.html
+++ b/sc.html
@@ -52,7 +52,7 @@
 			<img src="img7.jpg" class="img2">
 			<p class="imgtext">Piece 7. Series 1. 2019.</p>
 			<br>
-			<p class="endnote">&copy amy trabka 2020</p>
+			<p class="endnote">all content &copy amy trabka 2020</p>
 		</div>
 	</div>
 </body>
