--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<img src="9.jpg" class="img2">
 			<p class="imgtext">Piece 1. Series 2. 2019.</p>
 			<br>
-			<p class="endnote">&copy amy trabka 2020</p>
+			<p class="endnote">all content &copy amy trabka 2020</p>
 		</div>
 	</div>
 </body>
