--- a/hr.html
+++ b/hr.html
@@ -60,7 +60,7 @@
 			<img src="i.jpg" class="img2_hr">
 			<p class="imgtext">Piece 1. Series 2. 2006.</p>
 			<br>
-			<p class="endnote">&copy amy trabka 2020</p>
+			<p class="endnote">all content &copy amy trabka 2020</p>
 		</div>
 	</div>
 </body>
