--- a/hr.html
+++ b/hr.html
@@ -51,6 +51,8 @@
 			<p class="imgtext">Piece 4. Series 2. 2006.</p>
 			<img src="e.jpg" class="img2_hr">
 			<p class="imgtext">Piece 3. Series 1. 2006.</p>
+			<img src="ea.jpg" class="img2_hr">
+			<p class="imgtext">Piece 3. Series 1. 2006.</p>
 			<img src="f.jpg" class="img2_hr">
 			<p class="imgtext">Piece 2. Series 1. 2006.</p>
 			<img src="g.jpg" class="img2_hr">
