--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 			<p class="imgtext">Piece 4. Series 2. 2019.</p>
 			<img src="5.jpg" class="img2">
 			<p class="imgtext">Piece 3. Series 1. 2019.</p>
+			<img src="5.5.jpg" class="img2">
+			<p class="imgtext">Piece 3. Series 1. 2019.</p>
 			<img src="6.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 1. 2019.</p>
 			<img src="7.jpg" class="img2">
