--- a/sc.html
+++ b/sc.html
@@ -27,8 +27,14 @@
 				  	high resolution</a></button>
 				  	<br>
 						<button class="listitem"> <a  href="sc" style="color: inherit; text-decoration: none">
-				  sculpture</a></button>
-				  <br>
+				  		sculpture 1</a></button>
+				  	<br>
+					<button class="listitem"> <a  href="sc2" style="color: inherit; text-decoration: none">
+				 		sculpture 2</a></button>
+				  	<br>
+						<button class="listitem"> <a  href="box" style="color: inherit; text-decoration: none">
+				  		box</a></button>
+				  	<br>
 					<button id="btn1" class="listitem">about</button>
 					<t class="break">/</t>
 					<button id="btn2" class="listitem">contact</button>
