--- a/sc2.html
+++ b/sc2.html
@@ -25,10 +25,15 @@
 				</h1>
 				  <button class="listitem"> <a  href="hr" style="color: inherit; text-decoration: none">
 				  	high resolution</a></button>
+				  	<button class="listitem"> <a  href="sc" style="color: inherit; text-decoration: none">
+				  		sculpture 1</a></button>
 				  	<br>
-						<button class="listitem"> <a  href="sc" style="color: inherit; text-decoration: none">
-				  sculpture</a></button>
-				  <br>
+					<button class="listitem"> <a  href="sc2" style="color: inherit; text-decoration: none">
+				 		sculpture 2</a></button>
+				  	<br>
+						<button class="listitem"> <a  href="box" style="color: inherit; text-decoration: none">
+				  		box</a></button>
+				  	<br>
 					<button id="btn1" class="listitem">about</button>
 					<t class="break">/</t>
 					<button id="btn2" class="listitem">contact</button>
