--- a/sc.html
+++ b/sc.html
@@ -47,12 +47,18 @@
 			    </div>
 		</div>
 		<div class="col-md-8">
-			<img src="img1.jpg" class="img1">
+			<img src="img4.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2019.</p>
 			<img src="img3.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
-			<img src="img4.jpg" class="img2">
+			<img src="img2.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="img1.jpg" class="img2">
 			<p class="imgtext">Piece 4. Series 2. 2019.</p>
+			<img src="img5.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="img8.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<img src="img6.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 1. 2019.</p>
 			<img src="img7.jpg" class="img2">
