--- a/box.html
+++ b/box.html
@@ -47,16 +47,32 @@
 			    </div>
 		</div>
 		<div class="col-md-8">
-			<img src="img1.jpg" class="img1">
+			<img src="box1.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2019.</p>
-			<img src="img3.jpg" class="img2">
+			<img src="box2.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
-			<img src="img4.jpg" class="img2">
-			<p class="imgtext">Piece 4. Series 2. 2019.</p>
-			<img src="img6.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 1. 2019.</p>
-			<img src="img7.jpg" class="img2">
-			<p class="imgtext">Piece 7. Series 1. 2019.</p>
+			<img src="box3.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box4.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box5.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box6.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box7.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box8.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box9.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box10.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box11.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box12.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box13.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<br>
 			<p class="endnote">all content &copy amy trabka 2020</p>
 		</div>
