--- a/sc2.html
+++ b/sc2.html
@@ -47,16 +47,30 @@
 			    </div>
 		</div>
 		<div class="col-md-8">
-			<img src="img1.jpg" class="img1">
+			<img src="sc1.jpg" class="img1">
 			<p class="imgtext">Piece 4. Series 1. 2019.</p>
-			<img src="img3.jpg" class="img2">
+			<img src="sc2.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
-			<img src="img4.jpg" class="img2">
-			<p class="imgtext">Piece 4. Series 2. 2019.</p>
-			<img src="img6.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 1. 2019.</p>
-			<img src="img7.jpg" class="img2">
-			<p class="imgtext">Piece 7. Series 1. 2019.</p>
+			<img src="sc3.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc4.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc5.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc6.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc7.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc8.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc9.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc10.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc11.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="sc12.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<br>
 			<p class="endnote">all content &copy amy trabka 2020</p>
 		</div>
