--- a/sc.html
+++ b/sc.html
@@ -53,6 +53,8 @@
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<img src="img2.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<img src="box13.jpg" class="img2">
+			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<img src="img5.jpg" class="img2">
 			<p class="imgtext">Piece 2. Series 2. 2019.</p>
 			<img src="img8.jpg" class="img2">
