--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<br>
 				<div class="textcontainer">
 					<p id="p1" class="about">Amy Trabka is a multimedia artist based in Beirut, Lebanon.</p>
-					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com <br> +961 78 868 069</p>
+					<p id="p2" class="contact">www.amytrabka.com <br> amy_trabka@hotmail.com </p>
 			        </div>
 		</div>
 		<div class="col-md-8">
