--- a/box.html
+++ b/box.html
@@ -48,29 +48,29 @@
 		</div>
 		<div class="col-md-8">
 			<img src="box8.jpg" class="img1">
-			<p class="imgtext">Piece 4. Series 1. 2019.</p>
+			<p class="imgtext">Piece 1. 2015-2018.</p>
 			<img src="box7.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 2. 2015-2018.</p>
 			<img src="box3.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 3. 2015-2018.</p>
 			<img src="box4.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 4. 2015-2018.</p>
 			<img src="box1.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 5. 2015-2018.</p>
 			<img src="box5.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 6. 2015-2018.</p>
 			<img src="box2.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 7. 2015-2018..</p>
 			<img src="box6.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 8. 2015-2018.</p>
 			<img src="box10.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 9. 2015-2018.</p>
 			<img src="box9.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 10. 2015-2018.</p>
 			<img src="box11.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 11. 2015-2018.</p>
 			<br>
-			<p class="endnote">all content &copy amy trabka 2020</p>
+			<p class="endnote">all content &copy amy trabka 2021</p>
 		</div>
 	</div>
 </body>
