--- a/sc.html
+++ b/sc.html
@@ -48,25 +48,25 @@
 		</div>
 		<div class="col-md-8">
 			<img src="img3.jpg" class="img1">
-			<p class="imgtext">Piece 4. Series 1. 2019.</p>
+			<p class="imgtext">Piece 1. Series 1. 2016-2018.</p>
 			<img src="img4.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 2. Series 1. 2016-2018.</p>
 			<img src="img2.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 3. Series 1. 2016-2018.</p>
 			<img src="box13.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 4. Series 1. 2016-2018.</p>
 			<img src="box12.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 5. Series 1. 2016-2018.</p>
 			<img src="img5.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 6. Series 1. 2016-2018.</p>
 			<img src="img8.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 2. 2019.</p>
+			<p class="imgtext">Piece 7. Series 1. 2016-2018.</p>
 			<img src="img6.jpg" class="img2">
-			<p class="imgtext">Piece 2. Series 1. 2019.</p>
+			<p class="imgtext">Piece 8. Series 1. 2016-2018.</p>
 			<img src="img7.jpg" class="img2">
-			<p class="imgtext">Piece 7. Series 1. 2019.</p>
+			<p class="imgtext">Piece 9. Series 1. 2016-2018.</p>
 			<br>
-			<p class="endnote">all content &copy amy trabka 2020</p>
+			<p class="endnote">all content &copy amy trabka 2021</p>
 		</div>
 	</div>
 </body>
